--- a/views/practicas/nueva-practica.ejs
+++ b/views/practicas/nueva-practica.ejs
@@ -4,27 +4,32 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
-    <title>ITO - Project BD </title>
+    <title>ITO - Agenda </title>
     <link rel="icon" type="image/x-icon" href="../src/assets/img/favicon.ico"/>
     <link href="../layouts/vertical-dark-menu/css/light/loader.css" rel="stylesheet" type="text/css" />
     <link href="../layouts/vertical-dark-menu/css/dark/loader.css" rel="stylesheet" type="text/css" />
     <script src="../layouts/vertical-dark-menu/loader.js"></script>
 
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
-    <link href="../https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
     <link href="../src/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="../layouts/vertical-dark-menu/css/light/plugins.css" rel="stylesheet" type="text/css" />
     <link href="../layouts/vertical-dark-menu/css/dark/plugins.css" rel="stylesheet" type="text/css" />
     <!-- END GLOBAL MANDATORY STYLES -->
 
-    <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM STYLES -->
-    <link href="../src/plugins/src/apex/apexcharts.css" rel="stylesheet" type="text/css">
-    <link href="../src/assets/css/light/dashboard/dash_1.css" rel="stylesheet" type="text/css" />
-    <link href="../src/assets/css/dark/dashboard/dash_1.css" rel="stylesheet" type="text/css" />
-    <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
+    <!-- BEGIN PAGE LEVEL STYLE -->
+    <link href="../src/plugins/src/fullcalendar/fullcalendar.min.css" rel="stylesheet" type="text/css" />
+
+    <link href="../src/plugins/css/light/fullcalendar/custom-fullcalendar.css" rel="stylesheet" type="text/css" />
+    <link href="../src/assets/css/light/components/modal.css" rel="stylesheet" type="text/css">
+
+    <link href="../src/plugins/css/dark/fullcalendar/custom-fullcalendar.css" rel="stylesheet" type="text/css" />
+    <link href="../src/assets/css/dark/components/modal.css" rel="stylesheet" type="text/css">
+    <!-- END PAGE LEVEL STYLE -->
 
 </head>
-<body class="layout-boxed">
+<body class="dark layout-boxed">
+
     <!-- BEGIN LOADER -->
     <div id="load_screen"> <div class="loader"> <div class="loader-content">
         <div class="spinner-grow align-self-center"></div>
@@ -100,7 +105,7 @@
     <!--  END NAVBAR  -->
 
     <!--  BEGIN MAIN CONTAINER  -->
-    <div class="main-container" id="container">
+    <div class="main-container " id="container">
 
         <div class="overlay"></div>
         <div class="search-overlay"></div>
@@ -113,12 +118,12 @@
                 <div class="navbar-nav theme-brand flex-row  text-center">
                     <div class="nav-logo">
                         <div class="nav-item theme-logo">
-                            <a href="./index.html">
-                                <img src="../src/assets/img/ito_escudo.png" class="navbar-logo" alt="logo">
+                            <a href="../practicas/">
+                                <img src="../src/assets/img/ito_escudo.png" alt="logo">
                             </a>
                         </div>
                         <div class="nav-item theme-text">
-                            <a href="./index.html" class="nav-link"> ITO </a>
+                            <a href="../practicas/" class="nav-link"> ITO </a>
                         </div>
                     </div>
                     <div class="nav-item sidebar-toggle">
@@ -130,8 +135,8 @@
                 <div class="shadow-bottom"></div>
                 <ul class="list-unstyled menu-categories" id="accordionExample">
                     <br>
-                    <li class="menu active">
-                        <a href="./index.html"  aria-expanded="false" class="dropdown-toggle">
+                    <li class="menu">
+                        <a href="../practicas/"  aria-expanded="false" class="dropdown-toggle">
                             <div class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
                                 <span>Inicio</span>
@@ -144,16 +149,25 @@
                     </li>
 
                     <li class="menu">
-                        <a href="./app-calendar.html" aria-expanded="false" class="dropdown-toggle">
-                            <div class="">
+                        <a href="./agendar" aria-expanded="false" class="dropdown-toggle">
+                            <div class="active">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
                                 <span>Agenda</span>
                             </div>
                         </a>
                     </li>
+
+                    <li class="menu active">
+                        <a href="./nueva-practica" aria-expanded="false" class="dropdown-toggle">
+                            <div class="">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
+                                <span>Nueva practica</span>
+                            </div>
+                        </a>
+                    </li>
                     
                     <li class="menu">
-                        <a href="./app-chat.html" aria-expanded="false" class="dropdown-toggle">
+                        <a href="./chat" aria-expanded="false" class="dropdown-toggle">
                             <div class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
                                 <span>Chat</span>
@@ -162,7 +176,7 @@
                     </li>
 
                     <li class="menu">
-                        <a href="./app-todoList.html" aria-expanded="false" class="dropdown-toggle">
+                        <a href="./notas" aria-expanded="false" class="dropdown-toggle">
                             <div class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg>
                                 <span>Notas</span>
@@ -171,7 +185,7 @@
                     </li>
 
                     <li class="menu">
-                        <a href="./widgets.html" aria-expanded="false" class="dropdown-toggle">
+                        <a href="./escaner" aria-expanded="false" class="dropdown-toggle">
                             <div class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-airplay"><path d="M5 17H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-1"></path><polygon points="12 15 17 21 7 21 12 15"></polygon></svg>
                                 <span>Escáner</span>
@@ -259,51 +273,105 @@
             <div class="layout-px-spacing">
 
                 <div class="middle-content container-xxl p-0">
-
-                    <div class="row layout-top-spacing">
-
-                        <div class="col-xl-9 col-lg-12 col-md-12 col-sm-12 col-12 layout-spacing">
-                            <div class="widget widget-chart-three">
-                                <div class="widget-heading">
-                                    <div class="">
-                                        <h3 class="">¡Bienvenido a tu gestor de actividades!</h3>
-                                    </div>
-                                </div>
-
-                                <div class="widget-content">
-                                    <div id="uniqueVisits"></div>
-
-                                </div>
+                    
+                    <div class="row layout-top-spacing layout-spacing" id="cancel-row">
+                        <div class="col-xl-12 col-lg-12 col-md-12">
+                            <div class="calendar-container">
+                                <div class="calendar"></div>
                             </div>
                         </div>
+                    </div>
 
-                        <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12 layout-spacing">
-                            <div class="widget widget-activity-five">
-
-                                <div class="widget-heading">
-                                    <h5 class="">Información adicional</h5>
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Agregar Práctica</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
+                                <div class="modal-body">
+    
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="text-center>
+                                                <label class="form-label">Enter Title</label>
+                                                <input id="event-title" type="text" class="form-control">
+                                            </div>
+                                        </div>
+    
+                                        <div class="col-md-12">
+                                            <div class="">
+                                                <label class="form-label">Enter Start Date</label>
+                                                <input id="event-start-date" type="text" class="form-control">
+                                            </div>
+                                        </div>
 
-                                <div class="widget-content">
-                                    <div class="w-shadow-top"></div>
-
-                                    <div class="mt-container mx-auto">
-                                        <div class="timeline-line">
-                                            <h5>¡Estás al día!</h5>
-                                            <br><br>
-                                            <h6>Por el momento no hay ninguna información nueva.</h6>
-                                            <br><br>
-                                            <h6>Manten comunicación constante con la jefatura del centro de cómputo ante cualquier duda.</h6>
-                                        </div>                                    
+                                        <div class="col-md-12">
+                                            <div class="">
+                                                <label class="form-label">Enter Start Date</label>
+                                            </div>
+                                            <div class="dropdown">
+                                                <button id="my-dropdown" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Text</button>
+                                                <div class="dropdown-menu" aria-labelledby="my-dropdown">
+                                                    <a class="dropdown-item active" href="#">Text</a>
+                                                </div>
+                                            </div>
+                                        </div>
+    
+                                        <div class="col-md-12">
+                                            <div class="">
+                                                <label class="form-label">Enter End Date</label>
+                                                <input id="event-end-date" type="text" class="form-control">
+                                            </div>
+                                        </div>
+                                        
+                                        <div class="col-md-12">
+    
+                                            <div class="d-flex mt-4">
+                                                <div class="n-chk">
+                                                    <div class="form-check form-check-primary form-check-inline">
+                                                        <input class="form-check-input" type="radio" name="event-level" value="Work" id="rwork">
+                                                        <label class="form-check-label" for="rwork">Work</label>
+                                                    </div>
+                                                </div>
+                                                <div class="n-chk">
+                                                    <div class="form-check form-check-warning form-check-inline">
+                                                        <input class="form-check-input" type="radio" name="event-level" value="Travel" id="rtravel">
+                                                        <label class="form-check-label" for="rtravel">Travel</label>
+                                                    </div>
+                                                </div>
+                                                <div class="n-chk">
+                                                    <div class="form-check form-check-success form-check-inline">
+                                                        <input class="form-check-input" type="radio" name="event-level" value="Personal" id="rPersonal">
+                                                        <label class="form-check-label" for="rPersonal">Personal</label>
+                                                    </div>
+                                                </div>
+                                                <div class="n-chk">
+                                                    <div class="form-check form-check-danger form-check-inline">
+                                                        <input class="form-check-input" type="radio" name="event-level" value="Important" id="rImportant">
+                                                        <label class="form-check-label" for="rImportant">Important</label>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            
+                                        </div>
                                     </div>
-
-                                    <div class="w-shadow-bottom"></div>
+                                    
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn" data-bs-dismiss="modal">Cerrar</button>
+                                    <button type="button" class="btn btn-success btn-update-event" data-fc-event-public-id="">Update changes</button>
+                                    <button type="button" class="btn btn-primary btn-add-event">Agregar Práctica</button>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
+                
             </div>
+
             <!--  BEGIN FOOTER  -->
             <div class="footer-wrapper">
                 <div class="footer-section f-section-1">
@@ -316,21 +384,24 @@
             <!--  END FOOTER  -->
         </div>
         <!--  END CONTENT AREA  -->
-
+        
     </div>
     <!-- END MAIN CONTAINER -->
 
-    <!-- BEGIN GLOBAL MANDATORY SCRIPTS -->
+    <!-- START GLOBAL MANDATORY SCRIPTS -->
     <script src="../src/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../src/plugins/src/perfect-scrollbar/perfect-scrollbar.min.js"></script>
     <script src="../src/plugins/src/mousetrap/mousetrap.min.js"></script>
     <script src="../layouts/vertical-dark-menu/app.js"></script>
     <!-- END GLOBAL MANDATORY SCRIPTS -->
 
-    <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
-    <script src="../src/plugins/src/apex/apexcharts.min.js"></script>
-    <script src="../src/assets/js/dashboard/dash_1.js"></script>
-    <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
-
+    <!-- BEGIN PAGE LEVEL SCRIPTS -->
+    <script src="../src/plugins/src/fullcalendar/fullcalendar.min.js"></script>
+    <script src="../src/plugins/src/uuid/uuid4.min.js"></script>
+    <!-- END PAGE LEVEL SCRIPTS -->
+    
+    <!--  BEGIN CUSTOM SCRIPTS FILE  -->
+    <script src="../src/plugins/src/fullcalendar/custom-fullcalendar.js"></script>
+    <!--  END CUSTOM SCRIPTS FILE  -->
 </body>
 </html>
