--- a/views/practicas/index.ejs
+++ b/views/practicas/index.ejs
@@ -156,7 +156,7 @@
                         <a href="./nueva-practica" aria-expanded="false" class="dropdown-toggle">
                             <div class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
-                                <span>Nueva practica</span>
+                                <span>Prácticas</span>
                             </div>
                         </a>
                     </li>
@@ -317,13 +317,14 @@
                                 </div>
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
             <!--  BEGIN FOOTER  -->
             <div class="footer-wrapper">
                 <div class="footer-section f-section-1">
-                    <p class="">Copyright © <span class="dynamic-year">2022</span> <a target="_blank" href="http://www.oaxaca.tecnm.mx/">Instituto Tecnológico de Oaxaca</a>, Todos los derechos reservados.</p>
+                    <p class="">Copyright © <span class="dynamic-year">2022</span> <a target="_blank" href="http://www.oaxaca.tecnm.mx/">Instituto Tecnológico de Oaxaca</a>. Todos los derechos reservados.</p>
                 </div>
                 <div class="footer-section f-section-2">
                     <p class="">Developed by Orlando Lucero</path></p>
