--- a/views/practicas/agendar.ejs
+++ b/views/practicas/agendar.ejs
@@ -48,7 +48,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
             </a>
 
-            <h5 class="d-flex justify-content-between"><span class="align-self-center">CENTRO DE CÓMPUTO</span></h5>
+            <h5 class="d-flex justify-content-between mb-0"><span class="align-self-center">CENTRO DE CÓMPUTO</span></h5>
 
             <ul class="navbar-item flex-row ms-lg-auto ms-0">
 
@@ -292,6 +292,7 @@
                                                 <th class="text-center">Fecha</th>
                                                 <th class="text-center">Horario</th>
                                                 <th class="text-center">Grupo</th>
+                                                <th class="text-center">Aula</th>
                                                 <th class="text-center">Materia</th>
                                                 <th class="text-center">Docente</th>
                                                 <th class="text-center">Software</th>
@@ -305,6 +306,7 @@
                                                     <td class="text-center"> <%= practicas[practica].fecha %> </td>
                                                     <td class="text-center"> <%= practicas[practica].horario %> </td>
                                                     <td class="text-center"> <%= practicas[practica].grupo %> </td>
+                                                    <td class="text-center"> <%= practicas[practica].aula %> </td>
                                                     <td class="text-center">
                                                         <div class="text-wrap">
                                                             <h7> <%= practicas[practica].materia %> </h7>
